# opengl__glfw__glad

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  glad.c
